More spark 2.1.1 related adjustments to get things working. Avoid any changes to mysql/migration scripts, or you will get a checksum error when flyway tries to apply them.